# adventure

./: Cargo.toml  Dockerfile.rustcc_windows  README.md
crates/player/: Cargo.toml
crates/player/src/: components.rs  lib.rs  resources.rs  systems.rs
crates/player/src/plugins/: animation.rs  direction.rs  mod.rs  movement.rs  state.rs
src/: main.rs
