[package]
name = "adventure"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
  "crates/*"
]
resolver = "2"

[dependencies]
bevy = { version = "0.9.1" }
player = { version = "0.1.0", path = "crates/player" }

[target.'cfg(windows)'.dependencies]
